--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xmldom": "^0.1.27"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
